[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://entities/Player/models/body.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]

radius = 1.4255
height = 5.06235

[sub_resource type="SphereShape" id=2]

radius = 5.81727

[node name="Player" index="0" groups=[
"player",
] instance=ExtResource( 1 )]

script = ExtResource( 2 )
fric = 3
move_speed = 200
max_speed = 150
max_hp = 500
weight = 5

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3.99269, 0 )
shape = SubResource( 1 )
disabled = false

[node name="Scene Root" parent="." index="1" instance=ExtResource( 3 )]

[node name="CamTarg" type="Spatial" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 40, 0 )
_sections_unfolded = [ "Transform" ]

[node name="HUD" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HUD" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="HealthBar" type="ProgressBar" parent="HUD/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 300.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 0.0
max_value = 2000.0
step = 1.0
page = 0.0
value = 2000.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Percent", "Size Flags" ]

[node name="TempBar" type="ProgressBar" parent="HUD/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 300.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 0
min_value = 20.0
max_value = 110.0
step = 1.0
page = 0.0
value = 40.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Percent", "Size Flags" ]

[node name="Attack" type="Area" parent="." index="4"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Attack" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 4 )
shape = SubResource( 2 )
disabled = false

[node name="PrimaryAttackCooldown" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = true

[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]


